Added in Skeleton CSS library

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <header>
     <!-- Nav Bar------------------------------------------------->
     <nav>
-      <div class="container">
+      <div id="menu">
+        <!-- temporary 'hamburger' menu icon, will eventually be replaced -->
+        <img src="images/threelines.png">
         <ul>
           <li><a href="#">{ welcome }</a></li>
           <li><a href="#">{ about }</a></li>
@@ -35,6 +37,7 @@
         <li><a href="mailto:gooding.lizzie@gmail.com">{ email }</a></li>
         <li><a href="images/Resume.pdf" target="_blank">{ resume }</a></li>
         <li><a href="https://www.linkedin.com/in/sarahelizabethgooding">{ linkedin }</a>
+        <li><a href="https://github.com/lizziegooding">{ github }</a>
       </ul>
     </div>
   </section>
