Met all basic requirements for lab 1

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 
 <head>
   <title>Lizzie Gooding | Portfolio</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <!-- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> -->
+
   <!-- Set viewport equal to device width -->
   <meta name="viewport" content="width=device-width initial-scale=1">
-  <link href="base.css" rel="stylesheet" type="text/css" />
+
+  <!-- Connect CSS styles -->
+  <link rel="stylesheet" type="text/css" href="css/base.css" />
+  <link rel="stylesheet" type="text/css" href="vendor/skeleton_css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="vendor/skeleton_css/skeleton.css">
+
 </head>
 
 <body>
@@ -15,16 +21,14 @@
 
   <header>
     <!-- Nav Bar------------------------------------------------->
-    <nav>
-      <div id="menu">
+    <nav id="menu">
         <!-- temporary 'hamburger' menu icon, will eventually be replaced -->
-        <img src="images/threelines.png">
+        <img id="menu-icon" src="images/threelines.png">
         <ul>
           <li><a href="#">{ welcome }</a></li>
           <li><a href="#">{ about }</a></li>
           <li><a href="#">{ skills &amp; experience }</a>
         </ul>
-      </div>
     </nav>
   </header>
 
@@ -32,7 +36,7 @@
 
   <section>
     <div class="container">
-      <a href="index.html" id="title">Lizzie Gooding</a>
+      <h1 id="title">Lizzie Gooding</h1>
       <ul>
         <li><a href="mailto:gooding.lizzie@gmail.com">{ email }</a></li>
         <li><a href="images/Resume.pdf" target="_blank">{ resume }</a></li>
@@ -64,35 +68,35 @@
     <div class="container">
       Take a look at my work.
       <div class="row">
-    		<div class="four-columns">
+    		<div class="four columns">
     			<a href="https://api.tiles.mapbox.com/v4/pba.SF_affordability/page.html?access_token=pk.eyJ1IjoicGJhIiwiYSI6Im1LUlozWjQifQ.JUBNbCxrEo-60qaKM-Z6lA#10/45.5136/-122.6664" target="_blank"><img src="images/sf_web.png" alt="" /> </a>
     		</div>
 
-    		<div class="four-columns">
+    		<div class="four columns">
     			<a href="http://oregonp4p.org/our-research/foster-care-hotspots/" target="_blank"><img src="images/p4p.png" alt="" /> </a>
     		</div>
 
-    		<div class="four-columns">
-  			     <a href="work/Portland_Affordability.pdf" target="_blank"><img src="images/affordability_map.png" alt="" /> </a>
+    		<div class="four columns">
+  			    <a href="work/Portland_Affordability.pdf" target="_blank"><img src="images/affordability_map.png" alt="" /> </a>
   		  </div>
-  	</div>
+  	  </div>
 
     <div class="row">
-      <div class="four-columns">
+      <div class="four columns">
   			<a href="work/Geopolitics_Ukraine.pdf" target="_blank"><img src="images/ukraine.png" alt="" /> </a>
   		</div>
 
-      <div class="four-columns">
+      <div class="four columns">
   			<a href="work/TPP.pdf" target="_blank"><img src="images/trade_map.png" alt="" /> </a>
   		</div>
 
-      <div class="four-columns">
+      <div class="four columns">
   			<a href="work/Newberg_Economic_Revitalization_Plan_Sample.pdf" target="_blank"><img src="images/newberg.png" alt="" /> </a>
   		</div>
     </div>
 
     <div class="row">
-      <div class="four-columns">
+      <div class="four columns">
         <a href="work/Hillsboro_Housing_Needs_Analysis_Sample.pdf" target="_blank"><img src="images/hillsboro.png" alt="" /> </a>
       </div>
     </div>
