Linked to new js files

--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
   </div>
 </section>
 
-<script></script>
+<!-- Add jQuery library -->
+<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+<!-- Add local js files -->
+<script type="text/javascript" src="scripts/model.js"></script>
+<script type="text/javascript" src="scripts/view.js"></script>
+
 </body>
 </html>
