--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width initial-scale=1">
 
   <!-- Connect CSS styles -->
+  <link rel="stylesheet" type="text/css" href="css/reset.css" />
   <link rel="stylesheet" type="text/css" href="css/base.css" />
   <!-- <link rel="stylesheet" type="text/css" href="vendor/skeleton_css/normalize.css">
   <link rel="stylesheet" type="text/css" href="vendor/skeleton_css/skeleton.css"> -->
