First commit in day4 portfolio lab, added new type kits from adobe and type scales

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <!-- Connect CSS styles -->
   <!-- <link rel="stylesheet" type="text/css" href="css/reset.css" /> -->
   <link rel="stylesheet" type="text/css" href="css/base.css" />
-  <!-- <link rel="stylesheet" type="text/css" href="vendor/skeleton_css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="vendor/skeleton_css/skeleton.css"> -->
+  <script src="https://use.typekit.net/uxn6xyu.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
 </head>
 
