Reorganized CSS into SMACSS

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <!-- Connect CSS styles -->
   <!-- <link rel="stylesheet" type="text/css" href="css/reset.css" /> -->
   <link rel="stylesheet" type="text/css" href="css/base.css" />
+  <link rel="stylesheet" type="text/css" href="css/layout.css" />
+  <link rel="stylesheet" type="text/css" href="css/module.css" />
+  <link rel="stylesheet" type="text/css" href="css/state.css" />
   <script src="https://use.typekit.net/uxn6xyu.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
