First commit of day6 portfolio lab, converted data.js to data.json

--- a/index.html
+++ b/index.html
@@ -127,9 +127,8 @@
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
 <!-- Add local js files -->
-<script type="text/javascript" src="js/data.js"></script>
 <script type="text/javascript" src="js/work.js"></script>
 <script type="text/javascript" src="js/workView.js"></script>
-
+<script>// TODO: call to initiate data</script>
 </body>
 </html>
