Added AJAX functionality, completed todos for day6

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 <!-- Add local js files -->
 <script type="text/javascript" src="js/work.js"></script>
 <script type="text/javascript" src="js/workView.js"></script>
-<script>// TODO: call to initiate data</script>
+<script>console.log("Calling fetchAll");
+Work.fetchAll();</script>
 </body>
 </html>
