Finished about layout, will need to return to optimize for mobile

--- a/index.html
+++ b/index.html
@@ -71,10 +71,16 @@
 
   <section id="about">
     <div class="container">
-      <p>
-      I’m a spatially-minded developer seeking a career at the intersection of data visualization and programming. I am both a generalist, highly skilled in writing, speaking, and visualizing data, and a specialist with deep expertise in spatial problem solving and cartography. My qualitative skills complement and enhance a strong quantitative background that includes training in computer science, math, and spatial analysis. In the future, I am looking to combine data analysis, graphic design, and effective storytelling to create striking digital products for the media industry.
-    </p>
+      <div class="row">
+          <div id="about-img"></div>
+          <div class="column">
+            <h1 id="about-h1">About</h1>
+          <p>
+          I’m a spatially-minded developer seeking a career at the intersection of data visualization and programming. I am both a generalist, highly skilled in writing, speaking, and visualizing data, and a specialist with deep expertise in spatial problem solving and cartography. My qualitative skills complement and enhance a strong quantitative background that includes training in computer science, math, and spatial analysis. In the future, I am looking to combine data analysis, graphic design, and effective storytelling to create striking digital products for the media industry.
+        </p>
+      </div>
     </div>
+  </div>
   </section>
 
   <!-- Skills/Experience section ------------------------------------------------->
