--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
   <!-- Connect CSS styles -->
+  <link rel="stylesheet" type="text/css" href="vendor/skeleton_css/skeleton.css" />
+
   <link rel="stylesheet" type="text/css" href="css/layout.css" />
   <link rel="stylesheet" type="text/css" href="css/module.css" />
   <link rel="stylesheet" type="text/css" href="css/state.css" />
@@ -86,7 +88,135 @@
   <!-- Skills/Experience section ------------------------------------------------->
 
   <section id="skills">
-    <div class="container">These are my skills.</div>
+    <div class="container">
+      <h1 id="about-h1">Skills</h1>
+      <div class="row">
+        <div class="two columns">ArcGIS</div>
+        <!-- <div class="row"> -->
+          <div class="four columns">
+            <!-- <div class="row"> -->
+
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+          <!-- </div>
+        </div> -->
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="two columns">QGIS</div>
+        <div class="four columns">
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="two columns">Mapbox</div>
+        <div class="four columns">
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="two columns">Adobe Illustrator</div>
+        <div class="four columns">
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="two columns">Adobe InDesign</div>
+        <div class="four columns">
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="two columns">HTML &amp; CSS</div>
+        <div class="four columns">
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="two columns">JavaScript</div>
+        <div class="four columns">
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="two columns">Python</div>
+        <div class="four columns">
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="two columns">SQL</div>
+        <div class="four columns">
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="two columns">Git</div>
+        <div class="four columns">
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="two columns">R</div>
+        <div class="four columns">
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+        </div>
+      </div>
+
+    </div>
   </section>
 
   <!-- Work section ------------------------------------------------->
