--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
   <!-- Connect CSS styles -->
-  <link rel="stylesheet" type="text/css" href="vendor/skeleton_css/skeleton.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="vendor/skeleton_css/skeleton.css" /> -->
 
   <link rel="stylesheet" type="text/css" href="css/layout.css" />
   <link rel="stylesheet" type="text/css" href="css/module.css" />
@@ -92,18 +92,15 @@
       <h1 id="about-h1">Skills</h1>
       <div class="row">
         <div class="two columns">ArcGIS</div>
-        <!-- <div class="row"> -->
-          <div class="four columns">
-            <!-- <div class="row"> -->
-
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-          <!-- </div>
-        </div> -->
-        </div>
+        <div class="four columns">
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
+      </div>
+      <div class="two columns"></div>
+      <div class="four columns">Project Management</div>
       </div>
 
       <div class="row">
