Finished qualitative skills section

--- a/index.html
+++ b/index.html
@@ -90,20 +90,34 @@
   <section id="skills">
     <div class="container">
       <h1 id="about-h1">Skills</h1>
-      <div class="row">
-        <div class="two columns">ArcGIS</div>
-        <div class="four columns">
+      <div class="col">
+        <div>
+        <div>ArcGIS</div>
+        <!-- <div> -->
           <div class="circle"></div>
           <div class="circle"></div>
           <div class="circle"></div>
           <div class="circle"></div>
           <div class="circle"></div>
+        <!-- </div> -->
       </div>
-      <div class="two columns"></div>
-      <div class="four columns">Project Management</div>
+      <!-- </div>
+      <div class="col"> -->
+      <ul>
+        <li>Project Management</li>
+        <li>Research</li>
+        <li>Data Analysis</li>
+        <li>Geographic Visualization</li>
+        <li>Graphic Design</li>
+        <li>Oral and Written Communication</li>
+        <li>Problem Solving</li>
+        <li>Teaching</li>
+        <li>Consulting</li>
+        <li>Spanish</li>
+      </ul>
       </div>
 
-      <div class="row">
+      <!-- <div class="row">
         <div class="two columns">QGIS</div>
         <div class="four columns">
           <div class="circle"></div>
@@ -211,7 +225,7 @@
           <div class="circle"></div>
           <div class="circle"></div>
         </div>
-      </div>
+      </div>-->
 
     </div>
   </section>
