Mobile layout now working, skills section

--- a/index.html
+++ b/index.html
@@ -92,18 +92,21 @@
       <h1 id="about-h1">Skills</h1>
       <div class="col">
         <div>
-        <div>ArcGIS</div>
-        <!-- <div> -->
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-        <!-- </div> -->
+          <h3>Technical</h3>
+          <div class="sub-col">
+            <div>ArcGIS</div>
+            <div class="circle-container">
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+        </div>
+
       </div>
-      <!-- </div>
-      <div class="col"> -->
-      <ul>
+
+      <ul><h3>Qualitative</h3>
         <li>Project Management</li>
         <li>Research</li>
         <li>Data Analysis</li>
