Hard coded initial work template

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
   <!-- Connect CSS styles -->
-  <!-- <link rel="stylesheet" type="text/css" href="vendor/skeleton_css/skeleton.css" /> -->
+  <link rel="stylesheet" type="text/css" href="vendor/skeleton_css/skeleton.css" />
 
   <link rel="stylesheet" type="text/css" href="css/layout.css" />
   <link rel="stylesheet" type="text/css" href="css/module.css" />
@@ -106,16 +106,6 @@
       <div class="col">
         <div>
           <ul id="tech"><h3>Technical</h3>
-          <!-- <li class="sub-col">
-            <div>ArcGIS</div>
-            <div class="circle-container">
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-            </div>
-          </li> -->
       </ul>
       </div>
 
@@ -132,144 +122,42 @@
         <li>Spanish</li>
       </ul>
       </div>
-
-      <!-- <div class="row">
-        <div class="two columns">QGIS</div>
-        <div class="four columns">
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="two columns">Mapbox</div>
-        <div class="four columns">
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="two columns">Adobe Illustrator</div>
-        <div class="four columns">
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="two columns">Adobe InDesign</div>
-        <div class="four columns">
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="two columns">HTML &amp; CSS</div>
-        <div class="four columns">
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="two columns">JavaScript</div>
-        <div class="four columns">
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="two columns">Python</div>
-        <div class="four columns">
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="two columns">SQL</div>
-        <div class="four columns">
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="two columns">Git</div>
-        <div class="four columns">
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="two columns">R</div>
-        <div class="four columns">
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </div>-->
-
     </div>
   </section>
 
   <!-- Work section ------------------------------------------------->
 
-  <section id="work">
+  <!-- <section id="work">
     <div class="container"></div>
-  </section>
+  </section> -->
 
   <!-- OLD Work section ------------------------------------------------->
 
-  <!-- <section  id="work">
+  <section  id="work">
     <div class="container">
-      Take a look at my work.
+      <h1>Work</h1>
+      <h3>Web</h3>
       <div class="row">
-    		<div class="four columns">
-    			<a href="https://api.tiles.mapbox.com/v4/pba.SF_affordability/page.html?access_token=pk.eyJ1IjoicGJhIiwiYSI6Im1LUlozWjQifQ.JUBNbCxrEo-60qaKM-Z6lA#10/45.5136/-122.6664" target="_blank"><img src="images/sf_web.png" alt="" /> </a>
+    		<div class="four-columns">
+    			<a href="https://api.tiles.mapbox.com/v4/pba.SF_affordability/page.html?access_token=pk.eyJ1IjoicGJhIiwiYSI6Im1LUlozWjQifQ.JUBNbCxrEo-60qaKM-Z6lA#10/45.5136/-122.6664" target="_blank"><img src="images/sf_web.png" alt="" /></a>
+        </div>
+        <div class="eight columns">
+          <p>A brief description of the project or work featured. A brief description of the project or work featured. A brief description of the project or work featured. A brief description of the project or work featured. A brief description of the project or work featured</p>
     		</div>
+      </div>
 
+      <div class="row">
     		<div class="four columns">
     			<a href="http://oregonp4p.org/our-research/foster-care-hotspots/" target="_blank"><img src="images/p4p.png" alt="" /> </a>
     		</div>
+        <div class="eight columns">
+          <p>A brief description of the project or work featured. A brief description of the project or work featured. A brief description of the project or work featured. A brief description of the project or work featured. A brief description of the project or work featured</p>
+    		</div>
+      </div>
 
     		<div class="four columns">
   			    <a href="work/Portland_Affordability.pdf" target="_blank"><img src="images/affordability_map.png" alt="" /> </a>
   		  </div>
-  	  </div>
 
     <div class="row">
       <div class="four columns">
@@ -291,7 +179,7 @@
       </div>
     </div>
   </div>
-</section> -->
+</section>
 
 <!-- Add jQuery & Handlebars libraries -->
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
