Added link to work h4, hover effect on h4 and work img

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href="{{workUrl}}" target="_blank"><img src="{{imgUrl}}" alt="" /></a>
       </div>
       <div class="eight columns">
-        <h4>{{title}}</h4>
+        <a href="{{workUrl}}" target="_blank"><h4>{{title}}</h4></a>
         {{{body}}}
       </div>
     </article>
