--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="column">
             <h1 id="about-h1">About</h1>
           <p>
-          I’m a spatially-minded developer seeking a career at the intersection of data visualization and programming. I am both a generalist, highly skilled in writing, speaking, and visualizing data, and a specialist with deep expertise in spatial problem solving and cartography. My qualitative skills complement and enhance a strong quantitative background that includes training in computer science, math, and spatial analysis. In the future, I am looking to combine data analysis, graphic design, and effective storytelling to create striking digital products for the media industry.
+          I’m a spatially-minded developer seeking a career at the intersection of data visualization and programming. I am both a generalist, highly skilled in writing, speaking, and visualizing data, and a specialist with deep expertise in spatial problem solving and cartography. My qualitative skills complement and enhance a strong quantitative background that includes training in computer science, math, and spatial analysis. In the future, I am looking to combine data analysis, graphic design, and effective storytelling to create striking digital products.
         </p>
       </div>
     </div>
@@ -139,6 +139,17 @@
       <div id="web"><h3>Web</h3></div>
       <div id="print"><h3>Print</h3></div>
   </section>
+
+  <!-- Footer ------------------------------------------------->
+  <footer>
+      <div class="container">
+        <div class="col">
+          <!-- <div class="twelve.columns"> -->
+            <div id="copyright">&copy; 2016 Lizzie Gooding, All Rights Reserved  |  The content of this website may not be reproduced or distributed without the author's written consent.</div>
+          </div>
+        <!-- </div> -->
+      </div>
+    </footer>
 
 <!-- Add jQuery & Handlebars libraries -->
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
