Modified font and background color palette

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="viewport" content="width=device-width initial-scale=1">
 
   <!-- Connect to Adobe Typekit fonts -->
-  <script src="https://use.typekit.net/uxn6xyu.js"></script>
-  <script>try{Typekit.load({ async: true });}catch(e){}</script>
+  <!-- <script src="https://use.typekit.net/uxn6xyu.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script> -->
 
   <!-- Connect CSS styles -->
   <link rel="stylesheet" type="text/css" href="vendor/skeleton_css/skeleton.css" />
