--- a/index.html
+++ b/index.html
@@ -60,15 +60,16 @@
     <!-- Nav Bar------------------------------------------------->
     <nav>
         <!-- temporary 'hamburger' menu icon, will eventually be replaced -->
-        <img src="images/threelines.png">
+        <img src="images/favicon.png">
         <ul>
-          <li data-content="welcome">{ welcome }</li>
-          <li data-content="about">{ about }</li>
-          <li data-content="skills">{ skills &amp;<br>experience }</li>
-          <li data-content="work">{ work }
-            <li>- code</li>
-            <li>- design</li>
-            <li>- maps</li>
+          <li><a href="#home">home</a></li>
+          <li><a href="#about">about</a></li>
+          <li><a href="#skills">skills</a></li>
+          <li><a href="#work">work</a>
+            <ul>
+              <li><a href="#web">web</a></li>
+              <li><a href="#print">print</a></li>
+            </ul>
         </li>
         </ul>
     </nav>
@@ -76,7 +77,7 @@
 
   <!-- Welcome section ------------------------------------------------->
 
-  <section id="welcome">
+  <section id="home">
     <div class="container">
       <h1 id="title">Lizzie Gooding</h1>
       <div class="row">
