Revised home and about section alignment and mobile

--- a/index.html
+++ b/index.html
@@ -38,13 +38,11 @@
     <article class="row" category="{{category}}">
       <div class="four columns">
         <div class="work-img" style="background-image: url({{imgUrl}})">
-        <a href="{{workUrl}}" target="_blank">
-          <!-- <img src="{{imgUrl}}" alt="" /> -->
-        </a>
-      </div>
+        <a href="{{workUrl}}" target="_blank"></a>
+        </div>
       </div>
       <div class="eight columns">
-        <a href="{{workUrl}}" target="_blank"><h4>{{title}}</h4></a>
+        <h4><a href="{{workUrl}}" target="_blank">{{title}}</a></h4>
         {{{body}}}
       </div>
     </article>
@@ -62,13 +60,13 @@
         <!-- temporary 'hamburger' menu icon, will eventually be replaced -->
         <img src="images/favicon.png">
         <ul>
-          <li><a href="#home">home</a></li>
-          <li><a href="#about">about</a></li>
-          <li><a href="#skills">skills</a></li>
-          <li><a href="#work">work</a>
+          <li><a href="#home">HOME</a></li>
+          <li><a href="#about">ABOUT</a></li>
+          <li><a href="#skills">SKILLS</a></li>
+          <li><a href="#work">WORK</a>
             <ul>
-              <li><a href="#web">web</a></li>
-              <li><a href="#print">print</a></li>
+              <li><a href="#web">WEB</a></li>
+              <li><a href="#print">PRINT</a></li>
             </ul>
         </li>
         </ul>
@@ -94,8 +92,9 @@
   <section id="about">
     <div class="container">
       <div class="row">
-          <div id="about-img"></div>
-          <div class="column">
+          <div class="four columns">
+          <div id="about-img"></div></div>
+          <div class="eight columns">
             <h1 id="about-h1">About</h1>
           <p>
           I’m a spatially-minded developer seeking a career at the intersection of data visualization and programming. I am both a generalist, highly skilled in writing, speaking, and visualizing data, and a specialist with deep expertise in spatial problem solving and cartography. My qualitative skills complement and enhance a strong quantitative background that includes training in computer science, math, and spatial analysis. In the future, I am looking to combine data analysis, graphic design, and effective storytelling to create striking digital products.
