Revised skills section for mobile

--- a/index.html
+++ b/index.html
@@ -104,31 +104,32 @@
   </div>
   </section>
 
-  <!-- Skills/Experience section ------------------------------------------------->
+  <!-- Skills section ------------------------------------------------->
 
   <section id="skills">
     <div class="container">
       <h1 id="about-h1">Skills</h1>
-      <div class="col">
-        <div>
-          <ul id="tech"><h3>Technical</h3>
-      </ul>
-      </div>
-
-      <ul><h3>Qualitative</h3>
-        <li>Project Management</li>
-        <li>Research</li>
-        <li>Data Analysis</li>
-        <li>Geographic Visualization</li>
-        <li>Graphic Design</li>
-        <li>Oral and Written Communication</li>
-        <li>Problem Solving</li>
-        <li>Teaching</li>
-        <li>Consulting</li>
-        <li>Spanish</li>
-      </ul>
+      <div class="row">
+        <div class="six columns">
+          <!-- <div> -->
+            <ul id="tech"><h3>Technical</h3></ul>
+        </div>
+        <div class="six columns">
+        <ul><h3>Qualitative</h3>
+          <li>Project Management</li>
+          <li>Research</li>
+          <li>Data Analysis</li>
+          <li>Geographic Visualization</li>
+          <li>Graphic Design</li>
+          <li>Oral and Written Communication</li>
+          <li>Problem Solving</li>
+          <li>Teaching</li>
+          <li>Consulting</li>
+          <li>Spanish</li>
+        </ul>
       </div>
     </div>
+  </div>
   </section>
 
   <!-- Work section ------------------------------------------------->
