Finished revising styles, alignment, and mobile optimization

--- a/index.html
+++ b/index.html
@@ -143,13 +143,13 @@
 
   <!-- Footer ------------------------------------------------->
   <footer>
-      <div class="container">
-        <div class="col">
+      <!-- <div class="container"> -->
+        <div class="row">
           <!-- <div class="twelve.columns"> -->
             <div id="copyright">&copy; 2016 Lizzie Gooding, All Rights Reserved  |  The content of this website may not be reproduced or distributed without the author's written consent.</div>
           </div>
         <!-- </div> -->
-      </div>
+      <!-- </div> -->
     </footer>
 
 <!-- Add jQuery & Handlebars libraries -->
